# Batsh

./: .gitignore  .travis.yml  CHANGELOG.md  INSTALL.txt  LICENSE.txt  Makefile  README.md  _oasis  _tags  bash.ml  batsh  batsh.cabal  batsh.opam  configure  dune-project  lexer.mll  main.ml  myocamlbuild.ml  parser.mly  run  setup.ml  statement.ml  test
bash/: bash.mli  bashast.mli  bashcompile.ml  bashformat.ml
executable/: Main.hs
lib/: bash_ast.ml  bash_format.ml  bash_functions.ml  batsh_ast.ml  batsh_lib.ml  dune  formatutil.ml  lexer.mll  parser.ml  parser.mli  parser_yacc.mly  semantic_checker.ml  symbol_table.ml  symbol_table.mli  winbat.ml  winbat.mli  winbat_compile.ml  winbat_format.ml  winbat_functions.ml  winbat_transform.ml
script/: update.sh
scripts/: update.js
src/: Batsh.hs  BatshAst.hs  BatshLex.x  BatshParser.y  META  Main.hs  bash.ml  bash.mli  bash_ast.ml  bash_compile.ml  bash_format.ml  bash_functions.ml  bash_transform.ml  batsh.mlpack  batsh.ocp  batsh_ast.ml  batsh_format.ml  batsh_transform.ml  dune  errors.mli  formatutil.ml  formatutil.mli  main.ml  parser.ml  parser.mli  parser_yacc.mly  semantic_checker.ml  symbol_table.ml  symbol_table.mli  test.ml  version.ml  winbat.ml  winbat_ast.ml  winbat_compile.ml  winbat_format.ml  winbat_functions.ml  winbat_transform.ml
src/Batsh/: Ast.hs  Generator.hs  Lexer.x
src/bash/: META  bash.ml  bash.mli  bash_ast.ml  bash_compile.ml  bash_format.ml  bash_functions.ml  bash_lib.mllib  bashast.mli  bashcompile.ml  bashformat.ml
src/batch/: META  batch.ml  batch_ast.ml  batch_compile.ml  batch_format.ml  batch_lib.mllib
src/batsh/: META  batsh.ml  batsh.mli  batsh_ast.ml  batsh_format.ml  batsh_lib.mllib  batsh_transform.ml  batshast.ml  batshformat.ml  lexer.mll  parser.mly  symbol_table.ml
src/utils/: META  utils_lib.mllib
src/winbat/: META  batsh_winbat_lib.mllib  winbat.ml  winbat_ast.ml  winbat_compile.ml  winbat_format.ml  winbat_functions.ml  winbat_lib.mllib  winbat_transform.ml
test/: GeneratorTest.hs  LexerTest.hs  ParserTest.hs  SymbolTableTest.hs  TypeCheckTest.hs  UnitTest.hs  arith.c  comment.c  expr.c  if.c  while.c
test/testcase/Batsh/: arith.ast  arith.typed  array.ast  array.batsh  array.typed  assignment.ast  assignment.batsh  assignment.symbols  assignment.typed  block.ast  block.typed  command.ast  command.symbols  command.typed  comment.ast  comment.symbols  comment.typed  exists.ast  exists.symbols  exists.typed  function.ast  function.batsh  function.symbols  function.typed  if.ast  if.batsh  if.symbols  if.typed  recursion.ast  recursion.batsh  recursion.symbols  recursion.typed  string.ast  string.batsh  string.symbols  string.typed  while.ast  while.batsh  while.symbols  while.typed
test_scripts/: block.batsh  command.batsh  exists.batsh  function.batsh  recursion.batsh  string.batsh
test_scripts/bash/: array.sh  assignment.sh  command.sh  comment.sh  string.sh
test_scripts/batch/: arith.bat  array.bat  assignment.bat  block.bat  function.bat  if.bat  recursion.bat  string.bat
test_scripts/output/: array.txt  command.txt  exists.txt  function.txt  if.txt  recursion.txt  string.txt  while.txt
tests/: arith.c  array.c  assignment.c  block.c  command.js  comment.c  dune  expr.c  function.c  function.js  if.c  main.ml  recursion.c  test.ml  while.c
tests/bash/: arith.sh  array.sh  assignment.sh  block.sh  command.sh  comment.sh  exists.sh  function.sh  if.sh  recursion.sh  string.sh  while.sh
tests/batch/: arith.bat  array.bat  block.bat  command.bat  comment.bat  exists.bat  function.bat  if.bat  recursion.bat  string.bat  while.bat
tests/output/: arith.txt  array.txt  assignment.txt  block.txt  command.txt  expr.txt  function.txt  if.txt  recursion.txt  while.txt
