Name:                   Batsh
Version:                0.1.0
Cabal-Version:          >= 1.8
License:                MIT
Author:                 Carbo Kuo
Homepage:               https://github.com/BYVoid/Batsh
Bug-Reports:            https://github.com/BYVoid/Batsh/issues
Category:               Compiler
Synopsis:               A language that compiles to Bash and Windows Batch
Build-Type:             Simple

Library
  Build-Depends:        array, base, bytestring
  Exposed-Modules:      Batsh,
                        Batsh.Ast,
                        Batsh.Generator,
                        Batsh.Lexer,
                        Batsh.Parser
  Hs-Source-Dirs:       src

Executable batsh
  Main-Is:              Main.hs
  Hs-Source-Dirs:       src
  Other-Modules:        Batsh,
                        Batsh.Ast,
                        Batsh.Generator,
                        Batsh.Lexer,
                        Batsh.Parser
  Build-Depends:        array, base, bytestring, optparse-applicative >= 0.11.0.1, pretty-show

Test-Suite unit-test
  Type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  Hs-Source-Dirs:       test
  Build-Depends:        base,
                        Batsh,
                        test-framework,
                        test-framework-hunit,
                        HUnit
