Name:                   batsh
Version:                0.1.0
Cabal-Version:          >= 1.8
License:                MIT
Author:                 Carbo Kuo
Homepage:               https://github.com/BYVoid/Batsh
Bug-Reports:            https://github.com/BYVoid/Batsh/issues
Category:               Compiler
Synopsis:               A language that compiles to Bash and Windows Batch
Build-Type:             Simple

Library
  Hs-Source-Dirs:       library
  Build-Depends:        array, base, bytestring == 0.10.4.0, containers >= 0.5
  Build-Tools:          alex >= 3.1.3, happy >= 1.19.4
  Exposed-Modules:      Batsh,
                        Batsh.Ast,
                        Batsh.Ast.Poly,
                        Batsh.Generator,
                        Batsh.Lexer,
                        Batsh.Parser,
                        Batsh.SymbolTable,
                        Batsh.Token

Executable batsh
  Main-Is:              Main.hs
  Hs-Source-Dirs:       executable
  Build-Depends:        base, batsh,
                        optparse-applicative == 0.11.0.1,
                        pretty-show == 1.6.8

Test-Suite unit-test
  Type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  Hs-Source-Dirs:       test
  Build-Depends:        base,
                        batsh,
                        containers >= 0.5,
                        test-framework == 0.8.0.3,
                        test-framework-hunit == 0.3.0.1,
                        HUnit == 1.2.5.2
